# django_boilerplate

./: README.md  db.sqlite3  generate_secret_key.py  pyproject.toml
apps/core/: apps.py
config/: asgi.py
config/settings/: base.py
