[tool.poetry]
name = "dj-boiler-plate"
version = "0.1.0"
description = ""
authors = ["muhammad-asher <muhammadasher.se@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
